changed all archive_num to archive_id (new Lustre-HSM code)

--- a/doc/templates/hsm_policy_detailed.conf
+++ b/doc/templates/hsm_policy_detailed.conf
@@ -22,7 +22,7 @@ Filesets {
           migration_hints = "cos=1" ;
             
           # target storage backend
-          archive_num = 1;
+          archive_id = 1;
     }
 
     # user files in /mnt/lustre/project_A
@@ -37,7 +37,7 @@ Filesets {
           migration_hints = "cos=14" ;
 
           # target storage backend
-          archive_num = 2;
+          archive_id = 2;
     }
 
     # files in /mnt/lustre/project_B that satisfy an external command
@@ -53,7 +53,7 @@ Filesets {
           migration_hints = "cos=5";
 
           # target storage backend
-          archive_num = 2;
+          archive_id = 2;
     }
 
 
@@ -69,7 +69,7 @@ Filesets {
           migration_hints = "cos=18" ;
 
           # target storage backend
-          archive_num = 3;
+          archive_id = 3;
     }
 
     # files with owner 'foo' or group 'bar' and with xattr "LustrePE.tag_no_copy" == 1
