--- a/scripts/demo/rh.migr_purge.conf
+++ b/scripts/demo/rh.migr_purge.conf
@@ -54,7 +54,7 @@ migration_policies
     {
         # aggressive migr policy (15s after last mod)
         condition { last_mod > 15s }
-	archive_num = 1;
+	archive_id = 1;
     }
 }
 
