--- a/tests/lustre_fs/cfg/test_xattr.conf
+++ b/tests/lustre_fs/cfg/test_xattr.conf
@@ -17,7 +17,7 @@ Filesets
                         xattr.user.foo != ""
                 }
                 migration_hints="fileclass={fileclass}";
-                archive_num = 1;
+                archive_id = 1;
         }
 
         FileClass xattr_bar
@@ -28,7 +28,7 @@ Filesets
                         xattr.user.bar != ""
                 }
                 migration_hints="fileclass={fileclass}";
-                archive_num = 2;
+                archive_id = 2;
         }
 }
 
@@ -55,7 +55,7 @@ migration_policies
         condition {
                 last_mod > 5s
         }
-        archive_num = 3;
+        archive_id = 3;
     }
 }
 
