--- a/tests/posix_fs/cfg/test_fileclass.conf
+++ b/tests/posix_fs/cfg/test_fileclass.conf
@@ -25,35 +25,35 @@ Filesets
         {
             definition { tree == "/tmp/mnt.rbh/dir_A" }
             Migration_hints="fileclass={fileclass}";
-            archive_num = 1;
+            archive_id = 1;
         }
 
         FileClass in_dir_B
         {
             definition { tree == "/tmp/mnt.rbh/dir_B" }
             Migration_hints="fileclass={fileclass}";
-            archive_num = 1;
+            archive_id = 1;
         }
 
         FileClass odd_or_A
         {
             definition { odd_files UNION in_dir_A }
             Migration_hints="fileclass={fileclass}";
-            archive_num = 1;
+            archive_id = 1;
         }
 
         FileClass even_and_B
         {
             definition { even_files INTER in_dir_B }
             Migration_hints="fileclass={fileclass}";
-            archive_num = 1;
+            archive_id = 1;
         }
 
         FileClass even_and_not_B
         {
             definition { even_files INTER NOT in_dir_B }
             Migration_hints="fileclass={fileclass}";
-            archive_num = 1;
+            archive_id = 1;
         }
 }
 
@@ -88,7 +88,7 @@ migration_policies
     policy default
     {
         condition { last_mod > 1s }
-        archive_num = 1;
+        archive_id = 1;
         Migration_hints="unmatched";
     }
 
