--- a/tests/posix_fs/cfg/test1.conf
+++ b/tests/posix_fs/cfg/test1.conf
@@ -18,7 +18,7 @@ migration_policies
         {
             last_mod > 30sec
         }
-        archive_num = 1;
+        archive_id = 1;
     }
 }
 
