--- a/tests/posix_fs/cfg/test2.conf
+++ b/tests/posix_fs/cfg/test2.conf
@@ -20,7 +20,7 @@ migration_policies
             and
             name == "*[1-5]"
         }
-        archive_num = 1;
+        archive_id = 1;
     }
 }
 
