--- a/tests/posix_fs/cfg/test3.conf
+++ b/tests/posix_fs/cfg/test3.conf
@@ -16,7 +16,7 @@ Filesets
                         name == "*[02468]"
                 }
                 Migration_hints="fileclass={policy}";
-                archive_num = 1;
+                archive_id = 1;
         }
 
         FileClass odd_files
@@ -26,7 +26,7 @@ Filesets
                         name == "*[13579]"
                 }
                 Migration_hints="fileclass={policy}";
-                archive_num = 1;
+                archive_id = 1;
         }
 
 }
@@ -60,7 +60,7 @@ migration_policies
         condition {
                 last_mod > 60s
         }
-        archive_num = 1;
+        archive_id = 1;
     }
 
 }
