--- a/configure.ac
+++ b/configure.ac
@@ -100,14 +100,14 @@ if test "x$support_lustre" = "xyes" ; then
         AX_LUSTRE_VERSION
 
         if test "$LVERSION" = "2.2" ; then
-            # lu543 is fixed in Lustre 2.2
-            # then is replaced in Lustre 2.3
-            AC_MSG_NOTICE([lu543 is fixed in Lustre 2.2])
-            CFLAGS="$CFLAGS -D_CL_RNM_OVER"
+            # lu543 is present in Lustre 2.1 and 2.2
+            # then is obsoleted in Lustre 2.1 and 2.3 by LU-1331
+            AC_MSG_NOTICE([LU-543 is fixed in Lustre 2.2])
+            CFLAGS="$CFLAGS -D"
         else
             # for previous version, or customized, use --enable-lu543 to activate it
-            AX_ENABLE_FLAG( [cl-rename-overwrite], [changelog correctly reflects overwriting rename (lu543)], [-D_CL_RNM_OVER] )
-            AX_ENABLE_FLAG( [lu543], [same as cl-rename-overwrite], [-D_CL_RNM_OVER] )
+            AX_ENABLE_FLAG( [cl-rename-overwrite], [changelog correctly reflects overwriting rename (LU-543)], [-DHAVE_LU543] )
+            AX_ENABLE_FLAG( [lu543], [same as cl-rename-overwrite], [-DHAVE_LU543] )
         fi
 
         if test -z "$LVERSION"; then
