Fix lovEA management for Lustre 1.8

--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -4,6 +4,7 @@ AM_LDFLAGS= -lpthread
 DATE=`date '+%F %T'`
 MISC_FLAGS="-DCOMPIL_DATE=\"$(DATE)\""
 
+#Lustre only
 if LUSTRE
 sbin_PROGRAMS=read_lovea set_lovea
 
