New changelog reader options: mds_has_lu543 and mds_has_lu1331.
A rename command (eg. "mv foo1 foo2") will behave differently whether
LU-543 and LU-1331 have been applied to Lustre (client and server).
Extend the support for all possibilities, and try to autodetect the
current configuration, which can also be set in the configuration file.

To determnine whether each option could be set, create two files in an
empty directory and move one onto the other:
  touch foo1 foo2
  mv foo1 foo2

Then look at the changelogs (08RNMFM and 09RNMTO):
22500778 08RNMFM 18:28:03.944224249 2013.05.23 0x0 t=[0x2000032e0:0x1107:0x0] p=[0x68300001:0xf6bf042a:0x0] foo1
22500779 09RNMTO 18:28:03.944224249 2013.05.23 0x0 t=[0x2000032e0:0x1107:0x0] p=[0x68300001:0xf6bf042a:0x0] foo2

If the 't' fields is the same, then both mds_has_lu543 and mds_has_lu1331 must be set to FALSE.

If the 't' fields are different, then mds_has_lu543 can be set to TRUE.

If the event flag (hexadecimal number before "t=[") has its bit one
set (0x1), then mds_has_lu1331 is TRUE. If it is not set (0x0), then
mds_has_lu1331 is FALSE.

This patch also removes the configure options
--enable-cl-rename-overwrite and --enable-lu543 since the client's
capabilities do not reflect those of the server.

--- a/tests/lustre_fs/cfg/common.conf
+++ b/tests/lustre_fs/cfg/common.conf
@@ -23,6 +23,8 @@ ChangeLog
     }
     force_polling = TRUE;
     polling_interval = 1s;
+    mds_has_lu543 = FALSE;
+    mds_has_lu1331 = FALSE;
 }
 
 Log
