Added gen_lov_objid to recov-tools to generate lov_objid file for MDT recovery.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS=include logs common list_mgr entry_processor fs_scan cfg_parsing policy_matching policy_modules tools
+SUBDIRS=include logs common list_mgr entry_processor fs_scan cfg_parsing policy_matching policy_modules
 
 if CHANGELOGS
 SUBDIRS+=chglog_reader
@@ -8,7 +8,7 @@ if HSM_LITE
 SUBDIRS+=backend_ext
 endif
 
-SUBDIRS += robinhood tests
+SUBDIRS += robinhood tools tests
 
 indent:
 	for d in $(SUBDIRS); do 	\
