fix non-reg test: readlink modify symlinks atime, so they becomes eligible for purge.

--- a/tests/lustre_fs/cfg/PurgeStd_LastAccess.conf
+++ b/tests/lustre_fs/cfg/PurgeStd_LastAccess.conf
@@ -4,7 +4,7 @@ purge_policies
 {
 	policy default
 	{
-		condition { last_access <= 10sec }
+		condition { type == file and last_access <= 10sec }
     }
 }
 
