--- a/tests/posix_fs/cfg/PurgeStd_LastAccess.conf
+++ b/tests/posix_fs/cfg/PurgeStd_LastAccess.conf
@@ -4,7 +4,7 @@ purge_policies
 {
 	policy default
 	{
-		condition { last_access <= 10sec }
+		condition { type == file and last_access <= 10sec }
     }
 }
 
