Make the specfile compatible with RHEL or Oracle's version of mysql.
rpms from RedHat/CentOS provide mysql-... while Oracle's provide
MySQL-...., and there is no short way to tell rpm that either one
is good. So look for one common file they provide.

We lose the requirement on the version number though.

--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -30,9 +30,9 @@ Requires: %{lpackage} >= %{lversion}         \
 BuildRequires: %{lpackage} >= %{lversion}    \
 %endif \
 %endif \
-%if %{with mysql}                    \
-Requires: mysql >= %{dbversion}      \
-BuildRequires: mysql-devel >= 4.1    \
+%if %{with mysql}                            \
+Requires: libmysqlclient_r.so                \
+BuildRequires: /usr/include/mysql/mysql.h    \
 %endif \
 %{nil}
 
