Fixed most tests for backup mode. Added additional tests for diff (108d,e+109d,e): not passing for now.

--- a/tests/lustre_fs/cfg/info_collect.conf
+++ b/tests/lustre_fs/cfg/info_collect.conf
@@ -8,3 +8,11 @@ EntryProcessor
 FS_Scan {
 	ignore { type == directory and name == ".lustre" }
 }
+
+Migration_Policies
+{
+    policy default
+    {
+        condition { last_access >= 0 }
+    }
+}
