Lustre-HSM packaging + README.

--- a/configure.ac
+++ b/configure.ac
@@ -111,11 +111,13 @@ if test "x$support_lustre" = "xyes" ; then
             AX_LUSTRE_SRC_VERSION("$LDIR")
         fi
 
-        if test -z "$LVERSION"; then
-            LDEFINES=""
-        else
-            LDEFINES="--define=\"lversion $LVERSION\" --define=\"lpackage $LPACKAGE\""
+        LDEFINES=""
+        if test -n "$LVERSION"; then
+            LDEFINES="--define=\"lversion $LVERSION\""
             AC_DEFINE_UNQUOTED(LUSTRE_VERSION, "$LVERSION",  [Lustre version])
+        fi
+        if test -n "$LPACKAGE"; then
+            LDEFINES="$LDEFINES --define=\"lpackage $LPACKAGE\""
         fi
         AC_SUBST(LDEFINES)
 
@@ -235,9 +237,9 @@ case $PURPOSE in
         fi
 
         PURPOSE_CFLAGS="-D_LUSTRE_HSM"
-        PURPOSE_BIN="rbh-hsm"
-        PURPOSE_EXT="hsm"
-        PURPOSE_SVC="robinhood-hsm"
+        PURPOSE_BIN="rbh-lhsm"
+        PURPOSE_EXT="lhsm"
+        PURPOSE_SVC="robinhood-lhsm"
         AC_DEFINE([HAVE_MIGR_POLICY], [1], [Migration policy for Lustre-HSM purpose])
         AC_DEFINE([HAVE_RM_POLICY], [1], [HSM removal policy for Lustre-HSM purpose])
         AC_DEFINE([HAVE_PURGE_POLICY], [1], [Purge policy for Lustre-HSM purpose])
