--- a/tests/lustre_fs/cfg/lru_sort_arch_and_mod.conf
+++ b/tests/lustre_fs/cfg/lru_sort_arch_and_mod.conf
@@ -2,7 +2,7 @@
 
 migration_policies
 {
-	policy default { condition { last_mod > 22s } }
+	policy default { condition { last_archive == 0 and creation > 12s } }
 }
 
 migration_parameters {
@@ -11,7 +11,8 @@ migration_parameters {
 	migration_queue_size = 1;
 
 	# set a small result size to check request continuation
-	db_result_size_max = 3;	
+	db_result_size_max = 5;	
 
-	lru_sort_attr = last_mod;
+	lru_sort_attr = creation;
 }
+
