Added pidfile to startproc, to support more than one instance of robinhood.

--- a/scripts/robinhood.init.sles.in
+++ b/scripts/robinhood.init.sles.in
@@ -190,7 +190,7 @@ check_or_start_fs()
 			cd ${RH_RUN_DIR}
 			#action "$label ..." $cmdline
 			echo "$label ..."
-			startproc $cmdline
+			startproc -p $pidfile $cmdline
       # Remember status and be verbose
 		  rc_status -v
 		else
