--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -398,7 +398,7 @@ Pre-version 2.5 for testing purpose
 - [lustre] support for new Changelog record struct (lu-1331)
 - [fix] max_rm_count=0 resulted in no rm (instead of unlimited)
 - [fix] segfault in realpath() on Ubuntu
-- [fix] unsigned arythmetic issue with MySQL 5.5
+- [fix] unsigned arithmetic issue with MySQL 5.5
 
 * Thu Jul 05 2012 Thomas Leibovici <thomas.leibovici@cea.fr> 2.3.4
 - Faster and safer shutdown on SIGINT/SIGTERM
