policies: last_archive > N should not match never archived files.
The convention is (last_archive == 0) IF-AND-ONLY-IF file has never
been archived, so (last_archive > Ndays) should not match never
archived files.

--- a/tests/lustre_fs/cfg/lru_sort_archive.conf
+++ b/tests/lustre_fs/cfg/lru_sort_archive.conf
@@ -2,7 +2,7 @@
 
 migration_policies
 {
-	policy default { condition { last_archive > 10s } }
+	policy default { condition { last_archive == 0 or last_archive > 10s } }
 }
 
 migration_parameters {
