--- a/scripts/robinhood.init.in
+++ b/scripts/robinhood.init.in
@@ -12,16 +12,16 @@
 . /etc/rc.d/init.d/functions
 
 # variables - may be overwritten by /etc/sysconfig/robinhood
-RH_CONF_DIR=/etc/robinhood.d/@PURPOSE_EXT@	# directory containing configuration files
+RH_CONF_DIR=@CONFDIR@/robinhood.d/@PURPOSE_EXT@	# directory containing configuration files
 RH_RUN_DIR=/					# directory where daemon will run
-DAEMON=/usr/sbin/@PURPOSE_BIN@
+DAEMON=@SBINDIR@/@PURPOSE_BIN@
 
 # options for starting the daemon
 # eg. --scan --purge (leave empty for default actions).
 RBH_OPT=""
 
 # Source robinhood configuration.
-[ -f /etc/sysconfig/@PURPOSE_SVC@ ] && . /etc/sysconfig/@PURPOSE_SVC@
+[ -f @CONFDIR@/sysconfig/@PURPOSE_SVC@ ] && . @CONFDIR@/sysconfig/@PURPOSE_SVC@
 
 VARRUN=/var/run
 RETVAL=0
