--- a/scripts/robinhood.init.sles.in
+++ b/scripts/robinhood.init.sles.in
@@ -57,7 +57,7 @@ LOGLEVEL=1
 
 
 # variables - may be overwritten by /etc/sysconfig/robinhood
-RH_CONF_DIR=/etc/robinhood.d/@PURPOSE_EXT@	# directory containing configuration files for this purpose
+RH_CONF_DIR=@CONFDIR@/robinhood.d/@PURPOSE_EXT@	# directory containing configuration files for this purpose
 RH_RUN_DIR=/				# directory where daemon will run
 DAEMON=/usr/sbin/@PURPOSE_BIN@
 
