purge: allow custom purge command.
Allow defining a purge command (parameter purge_parameters::purge_command)
instead of performing 'unlink' action as built-in.
Purge command can take custom parameters like {path}, {fsname}, {fid}.
Added non-reg tests for this feature.

--- a/doc/templates/tmp_fs_mgr_detailed.conf
+++ b/doc/templates/tmp_fs_mgr_detailed.conf
@@ -283,6 +283,9 @@ Purge_Parameters
 
     # Limit the size of database result sets (save memory)
     db_result_size_max    = 10000 ;
+
+    # alternative purge command (default is built-in unlink())
+    #purge_command = "/usr/bin/move_to_trash.sh {path}";
 }
 
 # Trigger purge on individual OST usage
