--- a/configure.ac
+++ b/configure.ac
@@ -149,6 +149,10 @@ if test "x$support_lustre" = "xyes" ; then
             test "x$have_fid" = "xyes" && AC_DEFINE(_HAVE_FID, 1, [lustre supports fids])
         fi
 
+        # check for DNE support
+        AC_CHECK_LIB([lustreapi], [llapi_file_fget_mdtidx], [have_dne_support="yes"])
+        test "x$have_dne_support" = "xyes" && AC_DEFINE(HAVE_DNE, 1, [this version of Lustre supports DNE])
+
         AC_ARG_ENABLE( [changelogs], AS_HELP_STRING([--disable-changelogs],[Don't use ChangeLogs]),
                    use_changelogs=$enableval, use_changelogs='yes' )
 
