git repo: updated git ignore list and remove files that must not be tracked.

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ TAGS
 /scripts/robinhood.init.sles
 /scripts/sysconfig_robinhood
 /src/Makefile
+/src/todo
+/src/robinhood/todo
 /src/cfg_parsing/Makefile
 /src/chglog_reader/Makefile
 /src/common/Makefile
@@ -69,8 +71,23 @@ TAGS
 /src/robinhood/rbh-backup-recov
 /src/robinhood/rbh-backup-report
 /src/robinhood/rbh-backup-undo-rm
+/src/robinhood/rbh-backup-diff
+/src/robinhood/rbh-backup-rebind
+/src/tools/gen_lov_objid
+/src/tools/read_lovea
+/src/tools/set_lovea
 /src/robinhood/rbh-du
 /src/robinhood/rbh-find
 /src/robinhood/rbh-report
+/src/robinhood/rbh-diff
 /src/robinhood/robinhood
-
+/src/robinhood/rbh-lhsm
+/src/robinhood/rbh-lhsm-du
+/src/robinhood/rbh-lhsm-find
+/src/robinhood/rbh-lhsm-import
+/src/robinhood/rbh-lhsm-recov
+/src/robinhood/rbh-lhsm-report
+/src/robinhood/rbh-lhsm-undo-rm
+/src/robinhood/rbh-lhsm-diff
+/tests/lustre_fs/*.log
+/tests/posix_fs/*.log
