benchmark: add --enable-bench-db option to ./configure, for ingest rate benchmarks.
Enabling this option result in feeding the pipeline with 500k fake entries
when running a scan.

--- a/configure.ac
+++ b/configure.ac
@@ -65,6 +65,7 @@ AX_ENABLE_FLAG([debug-policies], [enables debug traces for entry processor pipel
 AX_ENABLE_FLAG([debug-hash], [enables debug traces internal hash tables], [-D_DEBUG_HASH])
 
 AX_ENABLE_FLAG([bench-scan], [build version for scan benchmarking], [-D_BENCH_SCAN])
+AX_ENABLE_FLAG([bench-db], [build version for DB benchmarking], [-D_BENCH_DB])
 AX_ENABLE_FLAG([gprof], [Add gprof info to the binaries], [-g -pg])
 
 # behavior flags
