Updated Licence from CeCILL to CeCILL-C: as with LGPL, Robinhood can be integrated to commercial products. Removed old spec files (for RHEL4). Doc update from 2.4.3.

--- a/Makefile.am
+++ b/Makefile.am
@@ -72,7 +72,7 @@ cppcheck:
 
 EXTRA_DIST= robinhood.spec robinhood.spec.in   		\
         doc/templates					\
-	LICENSE KnownBugs README.tmp_fs_mgr README.Lustre_HSM	\
+	LICENSE.fr.txt LICENSE.en.txt README.tmp_fs_mgr README.Lustre_HSM	\
 	doc/admin_guides \
     doc/install_webgui.txt \
 	ChangeLog
