tests: fix tests 637 to 640 (missing purge policies in config file).
The tests failed because they are about purge triggers but no purge policy
was defined in the config files, so the purge was disabled.

--- a/tests/lustre_fs/cfg/TriggerPurge_OstQuotaExceeded.conf
+++ b/tests/lustre_fs/cfg/TriggerPurge_OstQuotaExceeded.conf
@@ -7,3 +7,5 @@ Purge_Trigger
     low_watermark_pct = 65%;
     check_interval = 5min;
 }
+
+purge_policies { policy default { condition { last_mod >= 0 } } }
