--- a/tests/posix_fs/cfg/TriggerPurge_OstQuotaExceeded.conf
+++ b/tests/posix_fs/cfg/TriggerPurge_OstQuotaExceeded.conf
@@ -7,3 +7,5 @@ Purge_Trigger
     low_watermark_pct = 65%;
     check_interval = 5min;
 }
+
+purge_policies { policy default { condition { last_mod >= 0 } } }
