--- a/tests/posix_fs/cfg/TriggerPurge_QuotaExceeded.conf
+++ b/tests/posix_fs/cfg/TriggerPurge_QuotaExceeded.conf
@@ -7,3 +7,5 @@ purge_trigger
     low_watermark_pct = 74.5%;
     check_interval = 5min;
 }
+
+purge_policies { policy default { condition { last_mod >= 0 } } }
