--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -4,8 +4,8 @@ AM_LDFLAGS= -lpthread
 DATE=`date '+%F %T'`
 MISC_FLAGS="-DCOMPIL_DATE=\"$(DATE)\""
 
-all_libs=	../logs/liblogs.la \
-	        ../cfg_parsing/libconfigparsing.la \
+all_libs= ../logs/liblogs.la \
+            ../cfg_parsing/libconfigparsing.la \
                 ../fs_scan/libfsscan.la \
                 ../entry_processor/libentryproc.la \
                 ../policy_matching/libpolicies.la
@@ -36,7 +36,7 @@ all_libs += ../list_mgr/liblistmgr.la ../common/libcommontools.la
 #Lustre only
 if LUSTRE
 if USER_LOVEA
-sbin_PROGRAMS=read_lovea set_lovea gen_lov_objid
+sbin_PROGRAMS=read_lovea set_lovea gen_lov_objid ost_fids_remap
 
 set_lovea_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 read_lovea_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
@@ -44,5 +44,9 @@ read_lovea_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 gen_lov_objid_DEPENDENCIES=$(all_libs)
 gen_lov_objid_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 gen_lov_objid_LDADD=$(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+ost_fids_remap_DEPENDENCIES=$(all_libs)
+ost_fids_remap_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+
 endif
 endif
