packaging: fix build on Lustre 1.8.
disaster recov tools must not be built on Lustre 1.8.
(works with Lustre 2.1 to 2.3 only).

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,6 +8,7 @@ rpm_dir=`pwd`/rpms
 if LUSTRE
   rpmbuild_opt=--with lustre @LDEFINES@
 if USER_LOVEA
+  # Lustre 2.x only
   rpmbuild_opt += --with recovtools
 endif
 
