packaging: fix build on Lustre 2.5.
Some definitions are needed in lustre_idl.h to decode link EA
but this include needs lustre/lustre_errno.h which is not installed
on Lustre clients. This is a dirty fix to work around that
by creating an empty "lustre/lustre_errno.h" to fix the include error...

Also fix build of Lustre/HSM purpose on Lustre 2.5.

--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -13,7 +13,8 @@ noinst_HEADERS=db_types.h  list_mgr.h RW_Lock.h \
 		fs_scan_main.h chglog_reader.h resource_monitor.h \
 		xplatform_print.h lustre_extended_types.h \
 		policies.h rmdir.h queue.h StringAlloc.h hsm_rm.h migration.h \
-		entry_proc_hash.h list.h var_str.h
+		entry_proc_hash.h list.h var_str.h \
+        lustre/lustre_errno.h
 
 if LUSTRE_HSM
 noinst_HEADERS+=lustre_hsm_types.h lustre_hsm_types.def pipeline_types.h
