tests: fix tests for Lustre-HSM.
tests have not been run for a long time on Lustre/HSM
and many of them were failing because of outdated grep in logs, etc.
Updated test script to fix them.

--- a/doc/templates/hsm_policy_basic.conf
+++ b/doc/templates/hsm_policy_basic.conf
@@ -14,7 +14,8 @@ ListManager {
         server = "localhost" ;
         db     = "robinhood_hsm" ;
         user   = "robinhood" ;
-        password_file = "/etc/robinhood.d/lhsm/.dbpassword" ;
+		password = "robinhood";
+		#password_file = "/etc/robinhood.d/lhsm/.dbpassword";
     }
 }
 
