--- a/doc/templates/hsm_policy_detailed.conf
+++ b/doc/templates/hsm_policy_detailed.conf
@@ -394,6 +394,7 @@ ListManager
 		user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
+        #password_file = "/etc/robinhood.d/lhsm/.dbpassword" ;
         # innodb = enabled;
 	}
 #       user_acct = FALSE;
