--- a/doc/templates/hsmlite_basic.conf
+++ b/doc/templates/hsmlite_basic.conf
@@ -79,5 +79,6 @@ ListManager
 		user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
+        #password_file = "/etc/robinhood.d/backup/.dbpassword" ;
 	}
 }
