--- a/doc/templates/tmp_fs_mgr_basic.conf
+++ b/doc/templates/tmp_fs_mgr_basic.conf
@@ -20,5 +20,6 @@ ListManager
         db = robinhood_test;
         user = robinhood;
         password = robinhood;
+		#password_file = "/etc/robinhood.d/tmpfs/.dbpassword";
     }
 }
