--- a/doc/templates/tmp_fs_mgr_detailed.conf
+++ b/doc/templates/tmp_fs_mgr_detailed.conf
@@ -75,7 +75,8 @@ ListManager
         server = "localhost" ;
         db     = "robinhood_db" ;
         user   = "robinhood" ;
-        password_file = "/etc/robinhood.d/.dbpassword" ;
+        password = "robinhood";
+#        password_file = "/etc/robinhood.d/tmpfs/.dbpassword" ;
         # innodb = enabled;
     }
 
