--- a/doc/templates/hsm_main.conf
+++ b/doc/templates/hsm_main.conf
@@ -51,6 +51,7 @@ ListManager
 		user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
+		#password_file = "/etc/robinhood.d/lhsm/.dbpassword";
 	}
 
 }
