--- a/doc/templates/hsmlite_detailed.conf
+++ b/doc/templates/hsmlite_detailed.conf
@@ -266,6 +266,7 @@ ListManager
 		user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
+		#password_file = "/etc/robinhood.d/backup/.dbpassword";
         # innodb = enabled;
 	}
 #       user_acct = FALSE;
